--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ repositories{
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -42,22 +42,16 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.jakewharton:butterknife:7.0.1'
-
-    compile name:'SMSSDK-2.1.4',ext:'aar'
-    compile name:'SMSSDKGUI-2.1.4',ext:'aar'
-
+    compile name: 'SMSSDK-2.1.4', ext: 'aar'
+    compile name: 'SMSSDKGUI-2.1.4', ext: 'aar'
     compile 'com.unstoppable:submitbutton:1.1.0'
     compile 'org.litepal.android:core:1.3.2'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
-
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.lzy.widget:imagepicker:0.5.5'
-
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.google.code.gson:gson:2.7'
-
     compile 'com.github.adrielcafe:AndroidAudioRecorder:0.3.0'
 }
